Test localization of message property in response json

--- a/test/test-restful-api/grails-app/i18n/messages.properties
+++ b/test/test-restful-api/grails-app/i18n/messages.properties
@@ -1,3 +1,13 @@
+# **************************************************************************
+# Copyright 2013 Ellucian Company L.P. and its affiliates.
+# **************************************************************************/ 
+
+# RESTful API standard messages
+default.list.message=List of {0} resources
+default.not.listed.message={0} resources cannot be listed
+default.shown.message=Details for the {0} resource
+default.not.shown.message={0} resource cannot be shown
+
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
