--- a/test/test-restful-api/grails-app/i18n/messages.properties
+++ b/test/test-restful-api/grails-app/i18n/messages.properties
@@ -7,6 +7,7 @@ default.list.message=List of {0} resources
 default.not.listed.message={0} resources cannot be listed
 default.shown.message=Details for the {0} resource
 default.not.shown.message={0} resource cannot be shown
+default.validation.errors.message={0} resource had validation errors
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
