Added initial implementation of extractors to support multiple representations/versions of resource representations in requests. Changed implementation so media types that map to a format starting with 'xml' are automatically treated as json-as-xml. Changed error handling to pick the response type from the Accept-Header directly (since the error may be caused by content-negotiation errors). Change error handling to always return a response using either json or xml as the format.  That is, error responses are not versioned.

--- a/test/test-restful-api/grails-app/i18n/messages.properties
+++ b/test/test-restful-api/grails-app/i18n/messages.properties
@@ -1,6 +1,6 @@
 # **************************************************************************
 # Copyright 2013 Ellucian Company L.P. and its affiliates.
-# **************************************************************************/ 
+# **************************************************************************/
 
 # RESTful API standard messages
 default.list.message=List of {0} resources
@@ -8,7 +8,9 @@ default.not.listed.message={0} resources cannot be listed
 default.shown.message=Details for the {0} resource
 default.not.shown.message={0} resource cannot be shown
 default.validation.errors.message={0} resource had validation errors
+default.unknownrepresentation.message=Unsupported media type ''{1}'' for resource ''{0}''
 testapp.application.exception.message={0} resource had errors
+
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
