Changed the controller to remove the 'envelope' for responses.  All responses are now either a resource representation, or an array of resource representations.  Envelope information (such as paging info) is carried in the response headers.

--- a/test/test-restful-api/grails-app/i18n/messages.properties
+++ b/test/test-restful-api/grails-app/i18n/messages.properties
@@ -3,13 +3,19 @@
 # **************************************************************************/
 
 # RESTful API standard messages
-default.list.message=List of {0} resources
-default.not.listed.message={0} resources cannot be listed
-default.shown.message=Details for the {0} resource
-default.not.shown.message={0} resource cannot be shown
-default.validation.errors.message={0} resource had validation errors
-default.unknownrepresentation.message=Unsupported media type ''{1}'' for resource ''{0}''
+default.rest.list.message=List of {0} resources
+default.rest.not.listed.message={0} resources cannot be listed
+default.rest.shown.message=Details for the {0} resource
+default.rest.saved.message={0} resource created
+default.rest.updated.message={0} resource updated
+default.rest.deleted.message={0} resource deleted
+default.rest.not.shown.message={0} resource cannot be shown
+default.rest.validation.errors.message={0} resource had validation errors
+default.rest.unknownrepresentation.message=Unsupported media type ''{1}'' for resource ''{0}''
+default.rest.general.errors.message=Uknown error for {0}
+default.rest.unexpected.exception.messages=Encountered unexpected error generating a response
 testapp.application.exception.message={0} resource had errors
+
 
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
