--- a/test/test-restful-api/grails-app/i18n/messages.properties
+++ b/test/test-restful-api/grails-app/i18n/messages.properties
@@ -12,6 +12,7 @@ default.rest.deleted.message={0} resource deleted
 default.rest.not.shown.message={0} resource cannot be shown
 default.rest.validation.errors.message={0} resource had validation errors
 default.rest.unknownrepresentation.message=Unsupported media type ''{1}'' for resource ''{0}''
+default.rest.idmismatch.message=Id in representation for resource ''{0}'' did not match id of resource
 default.rest.general.errors.message=Uknown error for {0}
 default.rest.unexpected.exception.messages=Encountered unexpected error generating a response
 testapp.application.exception.message={0} resource had errors
