GREST-61 Implemented ability to configure which methods are supported on a per-resource basis.
Changed controller save() method to create() to be more descriptive of the actual operation.

--- a/test/test-restful-api/grails-app/i18n/messages.properties
+++ b/test/test-restful-api/grails-app/i18n/messages.properties
@@ -6,7 +6,7 @@
 default.rest.list.message=List of {0} resources
 default.rest.not.listed.message={0} resources cannot be listed
 default.rest.shown.message=Details for the {0} resource
-default.rest.saved.message={0} resource created
+default.rest.created.message={0} resource created
 default.rest.updated.message={0} resource updated
 default.rest.deleted.message={0} resource deleted
 default.rest.not.shown.message={0} resource cannot be shown
@@ -15,6 +15,7 @@ default.rest.unknownrepresentation.message=Unsupported media type ''{1}'' for re
 default.rest.idmismatch.message=Id in representation for resource ''{0}'' did not match id of resource
 default.rest.general.errors.message=Uknown error for {0}
 default.rest.unexpected.exception.messages=Encountered unexpected error generating a response
+default.rest.method.not.allowed.message=Method not allowed.
 testapp.application.exception.message={0} resource had errors
 
 
