--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -11,6 +11,7 @@ default.rest.updated.message={0} resource updated
 default.rest.deleted.message={0} resource deleted
 default.rest.not.shown.message={0} resource cannot be shown
 default.rest.validation.errors.message={0} resource had validation errors
+default.rest.unknownresource.message=Unsupported resource ''{0}''
 default.rest.unknownrepresentation.message=Unsupported media type ''{1}'' for resource ''{0}''
 default.rest.idmismatch.message=Id in representation for resource ''{0}'' did not match id of resource
 default.rest.general.errors.message=Uknown error for {0}
