--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -17,3 +17,4 @@ default.rest.idmismatch.message=Id in representation for resource ''{0}'' did no
 default.rest.general.errors.message=Uknown error for {0}
 default.rest.unexpected.exception.messages=Encountered unexpected error generating a response
 default.rest.method.not.allowed.message=Method not allowed.
+default.rest.extractor.unparsableDate=Unable to parse {0} as a Date
