--- a/test/test-restful-api/grails-app/i18n/messages.properties
+++ b/test/test-restful-api/grails-app/i18n/messages.properties
@@ -42,6 +42,7 @@ default.number.format=0
 
 default.created.message={0} {1} created
 default.updated.message={0} {1} updated
+default.patched.message={0} {1} patched
 default.deleted.message={0} {1} deleted
 default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
