Update Grails dep to 2.5.2, to support HTTP PATCH

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,5 +1,5 @@
 # ***************************************************************************
-# Copyright 2013 Ellucian Company L.P. and its affiliates.
+# Copyright 2013-2015 Ellucian Company L.P. and its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ default.rest.not.listed.message={0} resources cannot be listed
 default.rest.shown.message=Details for the {0} resource
 default.rest.created.message={0} resource created
 default.rest.updated.message={0} resource updated
+default.rest.patched.message={0} resource patched
 default.rest.deleted.message={0} resource deleted
 default.rest.not.shown.message={0} resource cannot be shown
 default.rest.validation.errors.message={0} resource had validation errors
