prototype of rest content filtering

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,5 +1,5 @@
 # ***************************************************************************
-# Copyright 2013 Ellucian Company L.P. and its affiliates.
+# Copyright 2013-2016 Ellucian Company L.P. and its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -31,3 +31,4 @@ default.rest.unexpected.exception.messages=Encountered unexpected error generati
 default.rest.method.not.allowed.message=Method not allowed.
 default.rest.extractor.unparsableDate=Unable to parse {0} as a Date
 default.rest.extractor.unparsableShortObject=Unable to parse {0} as a short-object
+default.rest.contentFilter.protectedField.message=Cannot access protected field in the {0} resource
